[gd_scene load_steps=5 format=3 uid="uid://bdf65keewo64f"]

[ext_resource type="PackedScene" uid="uid://cbhr4t2ek48mh" path="res://levels/level.tscn" id="1_f4ltd"]
[ext_resource type="Script" uid="uid://cklvlnq4d6x30" path="res://levels/one/level_one.gd" id="2_4rtqn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rtqn"]
size = Vector2(135, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iplyh"]
size = Vector2(135, 9)

[node name="LevelOne" instance=ExtResource("1_f4ltd")]
script = ExtResource("2_4rtqn")

[node name="PlatformDropShadow" type="ColorRect" parent="." index="1"]
offset_left = 506.0
offset_top = 530.0
offset_right = 641.0
offset_bottom = 576.0
color = Color(0, 0, 0, 0.67451)

[node name="Platform" type="StaticBody2D" parent="." index="5"]
position = Vector2(-21, 0)

[node name="Platform" type="ColorRect" parent="Platform" index="0"]
offset_left = 532.0
offset_top = 532.0
offset_right = 667.0
offset_bottom = 577.0
color = Color(0.563626, 0.563626, 0.563626, 1)

[node name="Platform2" type="ColorRect" parent="Platform/Platform" index="0"]
layout_mode = 0
offset_left = 127.0
offset_top = 2.0
offset_right = 133.0
offset_bottom = 43.0
color = Color(0.606626, 0.606626, 0.606626, 1)

[node name="Platform3" type="ColorRect" parent="Platform/Platform" index="1"]
layout_mode = 0
offset_left = 127.0
offset_top = 2.0
offset_right = 133.0
offset_bottom = 127.0
rotation = 1.57079
color = Color(0.606626, 0.606626, 0.606626, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform" index="1"]
visible = false
position = Vector2(599.5, 554.5)
shape = SubResource("RectangleShape2D_4rtqn")

[node name="PlatformAreaDetect" type="Area2D" parent="." index="6"]
position = Vector2(-21, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformAreaDetect" index="0"]
position = Vector2(599.5, 533.5)
shape = SubResource("RectangleShape2D_iplyh")

[node name="DisplayScreen" parent="." index="7"]
time = 10.0
text = "Stand still on the platform for 10 seconds."
text_display_time = 10.0

[connection signal="body_entered" from="PlatformAreaDetect" to="." method="_on_platform_area_body_entered"]
[connection signal="body_exited" from="PlatformAreaDetect" to="." method="_on_platform_area_body_exited"]
